This looks much nicer already

--- a/frontend/src/pages/ItemsPage/ItemsPage.module.css
+++ b/frontend/src/pages/ItemsPage/ItemsPage.module.css
@@ -29,3 +29,44 @@ ul.items {
   font-style: italic;
   opacity: 0.7;
 }
+
+
+.header {
+	padding: 10px;
+}
+.title {
+	flex: 1;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.title,
+.filterButton {
+	font-size: 18pt;
+}
+
+.container {
+	margin: 10px auto 30px;
+	border-top: 1px solid #ccc;
+}
+
+@media screen and (min-width: 980px) {
+	.container {
+		border: 1px solid #ccc;
+		border-radius: 10px;
+		box-shadow: 0 3px 8px #0000004d;
+	}
+}
+
+.total {
+	font-size: 0.8em;
+	text-align: center;
+	margin-bottom: 10px;
+	opacity: 0;
+	transition: opacity 500ms ease;
+}
+
+.showTotal > .total {
+	opacity: 0.5;
+}
