Added search page and some other refactoring

--- a/frontend/src/components/AuctionItem/AuctionItem.module.css
+++ b/frontend/src/components/AuctionItem/AuctionItem.module.css
@@ -25,6 +25,12 @@
 	font-weight: 400;
 }
 
+.objectName {
+	flex: 1;
+	display: flex;
+	align-items: center;
+}
+
 .details {
 	font-size: 0.7em;
 	opacity: 0.5;
