--- a/frontend/src/components/NavBar/NavBar.module.css
+++ b/frontend/src/components/NavBar/NavBar.module.css
@@ -11,7 +11,8 @@
 	padding: 12px 24px !important;
 }
 
-.navbar button, .navbar .button {
+.navbar button,
+.navbar .button {
 	color: var(--colour-on-main);
 }
 
@@ -37,10 +38,10 @@
 }
 
 @media only screen and (min-width: 768px) {
-	.darkMode {
+	/* .darkMode {
 		display: flex !important;
-	}
-	.darkModeMenu {
+	} */
+	/* .darkModeMenu {
 		display: none !important;
-	}
+	} */
 }
