--- a/frontend/src/pages/LatestPage/LatestPage.module.css
+++ b/frontend/src/pages/LatestPage/LatestPage.module.css
@@ -18,8 +18,9 @@
 }
 
 .searchBox {
-	width: calc(100% - 2rem);
-	margin: 1rem;
+	width: 100%;
+	display: flex;
+	padding: 2rem;
 	box-sizing: border-box;
 }
 
