Added bookmark function

--- a/frontend/src/components/AuctionItem/AuctionItem.module.css
+++ b/frontend/src/components/AuctionItem/AuctionItem.module.css
@@ -1,5 +1,6 @@
 .container {
 	border-top: 1px solid #eee;
+	position: relative;
 }
 
 .info {
@@ -54,35 +55,33 @@
 }
 
 .bookmarked {
-	border-top: 2px solid var(--colour-main);
+	border-top: 2px solid var(--colour-active);
 }
 
-@media screen and (max-width: 600px) {
-	.bigScreen {
-		display: none !important;
-	}
-}
-
-.bookmark {
+.bigScreen .bookmark {
 	transition: opacity 300ms ease;
 	display: flex;
 	opacity: 0;
-}
-
-.container::before {
-	content: "''";
 }
 
 .container:hover .bookmark {
 	opacity: 1;
 }
 
-.smallScreen {
+.sideBookmark {
 	display: flex;
-	justify-items: center;
+	opacity: 0;
+	align-items: center;
+	position: absolute;
+	left: -50px;
+	height: 100%;
+	transition: opacity 300ms ease;
 }
-@media screen and (min-width: 600px) {
-	.smallScreen > * {
-		display: none !important;
+.container:hover .sideBookmark {
+	opacity: 1;
+}
+@media screen and (max-width: 768px) {
+	.sideBookmark {
+		display: none;
 	}
 }
