--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,6 +17,7 @@ body {
 	--colour-active: var(--colour-main);
 	--colour-disabled: #ccc;
 	--colour-inactive: #666;
+	--colour-bookmark: #5ba967;
 
 	background-color: var(--colour-background);
 }
@@ -34,6 +35,7 @@ body.dark {
 	--colour-active: #fff;
 	--colour-disabled: #444;
 	--colour-inactive: #888;
+	--colour-bookmark: #82ba8a;
 }
 
 .icon {
