Added sorting to buying page

--- a/frontend/src/components/Title/Title.module.css
+++ b/frontend/src/components/Title/Title.module.css
@@ -1,5 +1,6 @@
 .header {
 	padding: 10px;
+	position: relative;
 }
 .title {
 	flex: 1;
@@ -15,4 +16,8 @@
 .left,
 .right {
 	position: absolute;
+}
+
+.right {
+	right: 0;
 }
