--- a/frontend/src/pages/BidsPages/BuyingPage.module.css
+++ b/frontend/src/pages/BidsPages/BuyingPage.module.css
@@ -3,3 +3,12 @@
 	font-size: 0.8rem;
 	text-align: center;
 }
+
+.button {
+	width: 40px;
+	height: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	cursor: pointer;
+}
