Restyled sorting buttons

--- a/frontend/src/pages/BidsPages/BuyingPage.module.css
+++ b/frontend/src/pages/BidsPages/BuyingPage.module.css
@@ -11,4 +11,9 @@
 	align-items: center;
 	justify-content: center;
 	cursor: pointer;
+	color: var(--colour-inactive);
+}
+
+.button.active {
+	color: var(--colour-active);
 }
