--- a/frontend/src/components/AuctionItem/AuctionItem.module.css
+++ b/frontend/src/components/AuctionItem/AuctionItem.module.css
@@ -14,7 +14,8 @@
 	min-height: 60px;
 }
 
-.ended {
+.ended .price,
+.ended .info {
 	opacity: 0.5;
 }
 
@@ -75,10 +76,10 @@
 .sideBookmark {
 	display: flex;
 	opacity: 0;
-	align-items: center;
 	position: absolute;
 	left: -50px;
 	height: 100%;
+	align-items: start;
 	transition: opacity 300ms ease;
 }
 .activeBookmark,
