--- a/frontend/src/components/AuctionItem/BookmarkButton.module.css
+++ b/frontend/src/components/AuctionItem/BookmarkButton.module.css
@@ -2,6 +2,7 @@
 	font-family: 'Material Icons';
 	font-size: 30px; /* Set icon size */
 	text-transform: none;
+	line-height: 1em;
 }
 
 .iconContainer::before {
