Simplified title component

--- a/frontend/src/components/Title/Title.module.css
+++ b/frontend/src/components/Title/Title.module.css
@@ -1,23 +1,15 @@
 .header {
 	padding: 8px;
 	position: relative;
-}
-.title {
-	flex: 1;
-	display: flex;
 	align-items: center;
-	justify-content: center;
 }
 
 .title {
-	font-size: 18pt;
-}
-
-.left,
-.right {
 	position: absolute;
+	text-align: center;
+	width: 100%;
 }
 
-.right {
-	right: 0;
+.filler {
+	flex: 1;
 }
